try calling cat directly

--- a/.github/workflows/populate-releasenotes.yml
+++ b/.github/workflows/populate-releasenotes.yml
@@ -55,14 +55,14 @@ jobs:
       - name: Convert .rst to .md 
         run: pandoc -s -o RELEASENOTES.md doc/releasenotes/${{ env.RELEASE_VERSION }}.rst
 
-      - name: Get release data in an environment variable
-        run: echo "DESCRIPTION=$(cat RELEASENOTES.md)" >> $GITHUB_ENV
+          # - name: Get release data in an environment variable
+          # run: echo "DESCRIPTION=$(cat RELEASENOTES.md)" >> $GITHUB_ENV
 
       - name: Populate the release description with RELEASENOTES.md
         run: |
           gh api repos/${{ github.repository }}/releases/tags/${{ env.RELEASE_VERSION }} \
           -X PATCH -H 'Accept: application/vnd.github.v3+json' \
-          -F body=${{ env.DESCRIPTION }}
+          -F body="$(cat DESCRITPION.md)"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
