--- a/.github/workflows/populate-releasenotes.yml
+++ b/.github/workflows/populate-releasenotes.yml
@@ -60,9 +60,14 @@ jobs:
 
       - name: Populate the release description with RELEASENOTES.md
         run: |
-          gh api repos/${{ github.repository }}/releases/tags/${{ env.RELEASE_VERSION }} \
-          -X PATCH -H 'Accept: application/vnd.github.v3+json' \
-          -F body="$(cat RELEASENOTES.md)"
+          curl -X PATCH \
+          -H 'Accept: application/vnd.github.v3+json' \
+          https://api.github.com/repos/${{ github.repository }}/releases/tags/${{ env.RELEASE_VERSION }} \
+          -d '{"body":"$(cat RELEASENOTES.md)"}'
+      # run: |
+      #    gh api repos/${{ github.repository }}/releases/tags/${{ env.RELEASE_VERSION }} \
+      #    -X PATCH -H 'Accept: application/vnd.github.v3+json' \
+      #    -F body="$(cat RELEASENOTES.md)"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
