--- a/.github/workflows/populate-releasenotes.yml
+++ b/.github/workflows/populate-releasenotes.yml
@@ -64,8 +64,7 @@ jobs:
     #      -H 'Accept: application/vnd.github.v3+json' \
     #      https://api.github.com/repos/${{ github.repository }}/releases/tags/${{ env.RELEASE_VERSION }} \
     #      -d '{"body":"$(cat RELEASENOTES.md)"}'
-        run: |
-          gh release create ${{ env.RELEASE_VERSION }} -t ${{ env.RELEASE_VERSION }} -dp -F RELEASENOTES.md
+        run: gh release create ${{ env.RELEASE_VERSION }} -t ${{ env.RELEASE_VERSION }} -dp -F RELEASENOTES.md
 
        # run: |
        #   gh api repos/${{ github.repository }}/releases/tags/${{ env.RELEASE_VERSION }} \
