--- a/.github/workflows/populate-releasenotes.yml
+++ b/.github/workflows/populate-releasenotes.yml
@@ -66,30 +66,13 @@ jobs:
       - name: Convert .rst to .md 
         run: pandoc -s -o RELEASENOTES.md -f rst -t gfm doc/releasenotes/${{ env.RELEASE_VERSION }}.rst
 
-          # - name: Get release data in an environment variable
-          # run: echo "DESCRIPTION=$(cat RELEASENOTES.md)" >> $GITHUB_ENV
 
       - name: Populate the release description with RELEASENOTES.md
-        # this finally worked after running:
-        # curl -i -X PATCH -H "Authorization: token {token goes here}" -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/yardasol/saltproc/releases/58264343 -d '{"name":"test"}'
-        # I could porbably make this work with eitehr the octockit actions, just raw curl,
-        # or potnatially cleaner would be gh api
-        uses: octokit/request-action@v2.x
-        id: populate_release_description
-        with:
-          route: PATCH /repos/${{ github.repository }}/releases/tags/${{ env.RELEASE_VERSION }}
-          body: "test"
-    #    run: |
-    #      curl -X PATCH \
-    #      -H 'Accept: application/vnd.github.v3+json' \
-    #      https://api.github.com/repos/${{ github.repository }}/releases/tags/${{ env.RELEASE_VERSION }} \
-    #      -d '{"body":"$(cat RELEASENOTES.md)"}'
-    #    run: gh release create ${{ env.RELEASE_VERSION }} -t ${{ env.RELEASE_VERSION }} -dp -F RELEASENOTES.md
-
-    #    run: |
-    #      gh api repos/${{ github.repository }}/releases/tags/${{ env.RELEASE_VERSION }} \
-    #      -X PATCH -H 'Accept: application/vnd.github.v3+json' \
-    #      -F body="$(cat RELEASENOTES.md)"
+        run: |
+          gh api repos/${{ github.repository }}/releases/${{ env.RELEASE_ID }} \
+          -H 'Accept: application/vnd.github.v3+json' \
+          -X PATCH \
+          -F body="$(cat RELEASENOTES.md)"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
