--- a/.github/workflows/populate-releasenotes.yml
+++ b/.github/workflows/populate-releasenotes.yml
@@ -46,11 +46,6 @@ jobs:
           conda install -c conda-forge pandoc
           pip install --upgrade pandoc
 
-      - name: Determine which release note has been updated
-        run: git      
-
-          ###### use the release id to do POST and PATCH requests
-
       - name: Get most recent draft release version
         run: |
           echo "RELEASE_VERSION=$(gh api repos/${{ github.repository }}/releases --jq '.[0] | .name')" >> $GITHUB_ENV
@@ -58,16 +53,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-       ## will need a way to clear the current release
-       ## or we just run this on publish ...
-       # - name: Clear current release
-        #   run: gh release
-        
       - name: Convert .rst to .md 
+        if: contains("$(ls doc/releasenotes/v*.rst)", env.RELEASE_VERSION)
         run: pandoc -s -o RELEASENOTES.md -f rst -t gfm doc/releasenotes/${{ env.RELEASE_VERSION }}.rst
 
 
       - name: Populate the release description with RELEASENOTES.md
+        if: contains($(ls), 'RELEASENOTES.md')
         run: |
           gh api repos/${{ github.repository }}/releases/${{ env.RELEASE_ID }} \
           -H 'Accept: application/vnd.github.v3+json' \
