--- a/.github/workflows/populate-releasenotes.yml
+++ b/.github/workflows/populate-releasenotes.yml
@@ -11,7 +11,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  deploy-docs:
+  populate-releasenotes:
     runs-on: ubuntu-latest
     defaults:
       run:
