--- a/.github/workflows/populate-releasenotes.yml
+++ b/.github/workflows/populate-releasenotes.yml
@@ -62,7 +62,7 @@ jobs:
         #if: contains($(ls), 'RELEASENOTES.md')
         run: |
           gh api repos/${{ github.repository }}/releases/${{ env.RELEASE_ID }} \
-          -H "Authorize: token ${{ GITHUB_TOKEN }}" \
+          -H "Authorize: token ${{ secrets.GITHUB_TOKEN }}" \
           -H "Accept: application/vnd.github.v3+json" \
           -X PATCH \
           -F body="$(cat RELEASENOTES.md)"
