--- a/.github/workflows/populate-releasenotes.yml
+++ b/.github/workflows/populate-releasenotes.yml
@@ -66,7 +66,7 @@ jobs:
           -H "Accept: application/vnd.github.v3+json" \
           -X PATCH \
           -F body="$(cat RELEASENOTES.md)"
-        #env:
-        #  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 
