--- a/.github/workflows/populate-releasenotes.yml
+++ b/.github/workflows/populate-releasenotes.yml
@@ -54,19 +54,23 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Convert .rst to .md 
-        #if: contains("$(ls doc/releasenotes/v*.rst)", env.RELEASE_VERSION)
         run: pandoc -s -o RELEASENOTES.md -f rst -t gfm doc/releasenotes/${{ env.RELEASE_VERSION }}.rst
 
 
       - name: Populate the release description with RELEASENOTES.md
-        #if: contains($(ls), 'RELEASENOTES.md')
-        run: |
-          curl --url https://api.github.com/repos/${{ github.repository }}/releases/${{ env.RELEASE_ID }} \
-          -H "authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-          -H "Accept: application/vnd.github.v3+json" \
-          -X PATCH \
-          -d '{"body":"curl test"}'
-          #-F body="$(cat RELEASENOTES.md)"
+        uses: octokit/request-actions@v2.x
+        with:
+          route: PATCH /repos/{owner}/{repo}/releases/{id}
+          owner: yardasol
+          repo: saltproc
+          id: ${{ env.RELEASE_ID }}
+          body: "ocotkit aciton test"
+       #run: |
+       #   gh api repos/${{ github.repository }}/releases/${{ env.RELEASE_ID }} \
+       #   -H "Authorize: ${{ secrets.GITHUB_TOKEN }}" \
+       #   -H "Accept: application/vnd.github.v3+json" \
+       #   -X PATCH \
+       #   -F body="$(cat RELEASENOTES.md)"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
