--- a/.github/workflows/populate-releasenotes.yml
+++ b/.github/workflows/populate-releasenotes.yml
@@ -58,7 +58,7 @@ jobs:
 
 
       - name: Populate the release description with RELEASENOTES.md
-        uses: octokit/request-actions@v2.x
+        uses: octokit/request-action@v2.x
         with:
           route: PATCH /repos/{owner}/{repo}/releases/{id}
           owner: yardasol
