--- a/.github/workflows/populate-releasenotes.yml
+++ b/.github/workflows/populate-releasenotes.yml
@@ -59,12 +59,13 @@ jobs:
 
       - name: Populate the release description with RELEASENOTES.md
         run: |
-          gh api repos/${{ github.repository }}/releases/${{ env.RELEASE_ID }} \
-          -H "Authorize: token ${{ secrets.GITHUB_TOKEN }}" \
-          -H "Accept: application/vnd.github.v3+json" \
-          -X PATCH \
-          -F body="$(cat RELEASENOTES.md)"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-
+          curl --request PATCH \
+          --url https://api.github.com/repos/${{ github.repository }}/releases/${{ env.RELASE_ID }} \
+          --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+          --header 'content-type: application/json' \
+          --data '{
+            "title": "v0.4.0",
+            "body": "This issue was automatically created by the GitHub Action workflow **${{ github.workflow }}**. \n\n The commit hash was: _${{ github.sha }}_."
+            }' \
+          --fail
+         
