--- a/.github/workflows/populate-releasenotes.yml
+++ b/.github/workflows/populate-releasenotes.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Get most recent draft release version
         run: |
           echo "RELEASE_VERSION=$(gh api repos/${{ github.repository }}/releases --jq '.[0] | .name')" >> $GITHUB_ENV
-          echo "RELEASE_ID=$(gh api repos/${{ github.repository }}/releases --jq '.[0] | .id')"
+          echo "RELEASE_ID=$(gh api repos/${{ github.repository }}/releases --jq '.[0] | .id')" >> $GITHUB_ENV
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -58,14 +58,13 @@ jobs:
 
 
       - name: Populate the release description with RELEASENOTES.md
-        run: |
-          curl --request PATCH \
-          --url https://api.github.com/repos/${{ github.repository }}/releases/${{ env.RELASE_ID }} \
-          --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
-          --header 'content-type: application/json' \
-          --data '{
-            "title": "v0.4.0",
-            "body": "This issue was automatically created by the GitHub Action workflow **${{ github.workflow }}**. \n\n The commit hash was: _${{ github.sha }}_."
-            }' \
-          --fail
-         
+       run: |
+          gh api repos/${{ github.repository }}/releases/${{ env.RELEASE_ID }} \
+          -H "Authorize: token ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Accept: application/vnd.github.v3+json" \
+          -X PATCH \
+          -F body="$(cat RELEASENOTES.md)"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
