test if editin relase body trggers publish

--- a/.github/workflows/populate-releasenotes.yml
+++ b/.github/workflows/populate-releasenotes.yml
@@ -3,10 +3,10 @@ name: Populate SaltProc release notes
 
 on:
   push:
-    branches:
-      - master 
+    # branches:
+    #   - master 
     paths:
-      - 'doc/releasenotes/v**.rst'
+      - 'doc/releasenotes/v0.4.0.rst'
   # enable worflow to be run manually
   workflow_dispatch:
 
