--- a/.github/workflows/next-release-minor.yml
+++ b/.github/workflows/next-release-minor.yml
@@ -43,6 +43,12 @@ jobs:
           -F name=${{ env.NEW_RELEASE_VERSION }} \
           -F draft=true \ 
           -F tag_name=${{ env.NEW_RELEASE_VERSION }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
+       - name: Create a new milestone.
+         run: |
           gh api repos/${{ github.repository }}/milestones \
           -H "Authorize: token ${{ secrets.GITHUB_TOKEN }}" \
           -H "Accept: application/vnd.github.v3+json" \
@@ -59,3 +65,6 @@ jobs:
           git commit -m "created ${{ env.NEW_RELEASE_VERSION }} release notes"
           git fetch origin
           git push origin test 
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
