--- a/.github/workflows/next-release-minor.yml
+++ b/.github/workflows/next-release-minor.yml
@@ -68,7 +68,7 @@ jobs:
 
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git chekout origin test
+          git checkout origin test
           git commit -m "created ${{ env.NEW_RELEASE_VERSION }} release notes"
           git push origin test 
         env:
