--- a/.github/workflows/next-release-minor.yml
+++ b/.github/workflows/next-release-minor.yml
@@ -68,9 +68,9 @@ jobs:
 
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git checkout origin test
+          git checkout test
           git commit -m "created ${{ env.NEW_RELEASE_VERSION }} release notes"
-          git push origin test 
+          git push test 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
