--- a/.github/workflows/next-release-micro.yml
+++ b/.github/workflows/next-release-micro.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Increment micro version
         run: |
           IFS='.' read -ra arr <<< ${{ env.RELEASE_VERSION }}
-          MINOR_VERSION=$((${arr[2]}+1))
+          MICRO_VERSION=$((${arr[2]}+1))
           arr[2]=$MICRO_VERSION
           NEW_RELEASE_VERSION="${arr[0]}.${arr[1]}.${arr[2]}"
           echo "NEW_RELEASE_VERSION="$NEW_RELEASE_VERSION >> $GITHUB_ENV
