--- a/.github/workflows/next-release-minor.yml
+++ b/.github/workflows/next-release-minor.yml
@@ -67,5 +67,6 @@ jobs:
           git config --local user.name "github-actions[bot]"
           git checkout master
           git commit -m "created ${{ env.NEW_RELEASE_VERSION }} release notes"
+          git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
