--- a/.github/workflows/next-release-micro.yml
+++ b/.github/workflows/next-release-micro.yml
@@ -58,7 +58,9 @@ jobs:
         run: |
           cp doc/releasenotes/template.rst doc/releasenotes/${{ env.NEW_RELEASE_VERSION }}.rst
           sed -i "s/vx.x.x/${{ env.NEW_RELEASE_VERSION }}/g" doc/releasenotes/${{ env.NEW_RELEASE_VERSION }}.rst
+          sed -i "s/${{ env.RELEASE_VERSION }}/${{ env.NEW_RELEASE_VERSION }}\n  ${{ env.RELEASE_VERSION }}/g" doc/releasenotes/index.rst
           git add doc/releasenotes/${{ env.NEW_RELEASE_VERSION }}.rst
+          git add doc/releasenotes/index.rst
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git commit -am "created ${{ env.NEW_RELEASE_VERSION }} release notes"
