--- a/.github/workflows/next-release-micro.yml
+++ b/.github/workflows/next-release-micro.yml
@@ -27,8 +27,11 @@ jobs:
         run: |
           IFS='.' read -ra arr <<< ${{ env.RELEASE_VERSION }}
           MICRO_VERSION=$((${arr[2]}+1))
+          arr[1]=$MINOR_VERSION
           arr[2]=$MICRO_VERSION
           NEW_RELEASE_VERSION="${arr[0]}.${arr[1]}.${arr[2]}"
+          echo "MINOR_VERSION"=$MINOR_VERSION >> $GITHUB_ENV
+          echo "MICRO_VERSION"=$MICRO_VERSION >> $GITHUB_ENV
           echo "NEW_RELEASE_VERSION="$NEW_RELEASE_VERSION >> $GITHUB_ENV
 
       - name: Create a new release
@@ -56,12 +59,18 @@ jobs:
 
       - name: Create new release notes
         run: |
+          echo "Configure git"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          echo "Make edits to docfiles and version.py"
           cp doc/releasenotes/template.rst doc/releasenotes/${{ env.NEW_RELEASE_VERSION }}.rst
           sed -i "s/vx.x.x/${{ env.NEW_RELEASE_VERSION }}/g" doc/releasenotes/${{ env.NEW_RELEASE_VERSION }}.rst
           sed -i "s/${{ env.RELEASE_VERSION }}/${{ env.NEW_RELEASE_VERSION }}\n  ${{ env.RELEASE_VERSION }}/g" doc/releasenotes/index.rst
+          sed -i "s/_version_micro = *\'+[0-9]*\'/_version_micro = ${{ env.MICRO_VERSION }}/g" saltproc/version.py
+          echo "Add, commit, and push changes"
           git add doc/releasenotes/${{ env.NEW_RELEASE_VERSION }}.rst
           git add doc/releasenotes/index.rst
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
           git commit -am "created ${{ env.NEW_RELEASE_VERSION }} release notes"
+          git add saltproc/version.py 
+          git commit -am "updated version to ${{ env.NEW_RELEASE_VERSION }}-dev"
           git push
