--- a/.github/workflows/next-release-micro.yml
+++ b/.github/workflows/next-release-micro.yml
@@ -62,11 +62,15 @@ jobs:
           echo "Configure git"
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          echo "Make edits to docfiles and version.py"
+          echo "Make edits to docfiles"
           cp doc/releasenotes/template.rst doc/releasenotes/${{ env.NEW_RELEASE_VERSION }}.rst
           sed -i "s/vx.x.x/${{ env.NEW_RELEASE_VERSION }}/g" doc/releasenotes/${{ env.NEW_RELEASE_VERSION }}.rst
           sed -i "s/${{ env.RELEASE_VERSION }}/${{ env.NEW_RELEASE_VERSION }}\n  ${{ env.RELEASE_VERSION }}/g" doc/releasenotes/index.rst
-          sed -i "s/_version_micro = *\'+[0-9]*\'/_version_micro = ${{ env.MICRO_VERSION }}/g" saltproc/version.py
+          echo "Make edits to version.py"
+          sed -i "s/_version_micro = *'*[0-9]*'/_version_micro = ${{ env.MICRO_VERSION }}/g" saltproc/version.py
+          sed -i "s/_version_minor = *'*[0-9]*'/_version_minor = ${{ env.MINOR_VERSION }}/g" saltproc/version.py
+          sed -i "s/*#*\s_version_extra = 'dev'/_version_extra = 'dev'/g" saltproc/version.py
+          sed -i "s/*#*\s_version_extra = '0'/\#\s_version_extra = '0'/g" saltproc/version.py
           echo "Add, commit, and push changes"
           git add doc/releasenotes/${{ env.NEW_RELEASE_VERSION }}.rst
           git add doc/releasenotes/index.rst
