added jsonschema package to doc-environment.yml

--- a/doc/doc-environment.yml
+++ b/doc/doc-environment.yml
@@ -10,6 +10,7 @@ dependencies:
   - pydotplus
   - sphinx
   - sphinx_rtd_theme
+  - jsonschema
   - pip:
       - sphinx-multiversion
       - sphinxcontrib-apidoc
