--- a/.github/workflows/next-release-minor.yml
+++ b/.github/workflows/next-release-minor.yml
@@ -62,6 +62,7 @@ jobs:
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           echo "Make edits to docfiles"
+          sed -i "s/\.\. note:: These release notes are currently in production\.//g" doc/releasenotes/${{ env.RELEASE_VERSION }}.rst
           cp doc/releasenotes/template.rst doc/releasenotes/${{ env.NEW_RELEASE_VERSION }}.rst
           sed -i "s/vx.x.x/${{ env.NEW_RELEASE_VERSION }}/g" doc/releasenotes/${{ env.NEW_RELEASE_VERSION }}.rst
           sed -i "s/${{ env.RELEASE_VERSION }}/${{ env.NEW_RELEASE_VERSION }}\n  ${{ env.RELEASE_VERSION }}/g" doc/releasenotes/index.rst
@@ -71,6 +72,7 @@ jobs:
           sed -i "s/^# _version_extra = 'dev'/_version_extra = 'dev'/g" saltproc/version.py
           sed -i "s/^_version_extra = ''# _version_extra = ''/g" saltproc/version.py
           echo "Add, commit, and push changes"
+          git add doc/releasenotes/${{ env.RELEASE_VERSION }}.rst
           git add doc/releasenotes/${{ env.NEW_RELEASE_VERSION }}.rst
           git add doc/releasenotes/index.rst
           git commit -am "created ${{ env.NEW_RELEASE_VERSION }} release notes"
