add filter to populate-releasenotes.yml to only run from the master branch

--- a/.github/workflows/populate-releasenotes.yml
+++ b/.github/workflows/populate-releasenotes.yml
@@ -3,6 +3,8 @@ name: Populate SaltProc release notes
 
 on:
   push:
+    branches:
+      - 'master'
     paths:
       - 'doc/releasenotes/v**.rst'
   # enable worflow to be run manually
