fix MINOR_RELEASE variable in next-release-minor.yml

--- a/.github/workflows/next-release-minor.yml
+++ b/.github/workflows/next-release-minor.yml
@@ -31,6 +31,7 @@ jobs:
           MINOR_VERSION=$((${arr[1]}+1))
           arr[1]=$MINOR_VERSION
           NEW_RELEASE_VERSION="${arr[0]}.${arr[1]}.${arr[2]}"
+          echo "MINOR_VERSION="$MINOR_VERSION >> $GITHUB_ENV
           echo "NEW_RELEASE_VERSION="$NEW_RELEASE_VERSION >> $GITHUB_ENV
 
       - name: Create a new release
@@ -70,7 +71,7 @@ jobs:
           sed -i "s/_version_micro = *'*[0-9]*'/_version_micro = ''/g" saltproc/version.py
           sed -i "s/_version_minor = *'*[0-9]*'/_version_minor = ${{ env.MINOR_VERSION }}/g" saltproc/version.py
           sed -i "s/^# _version_extra = 'dev'/_version_extra = 'dev'/g" saltproc/version.py
-          sed -i "s/^_version_extra = ''# _version_extra = ''/g" saltproc/version.py
+          sed -i "s/^_version_extra = ''/# _version_extra = ''/g" saltproc/version.py
           echo "Add, commit, and push changes"
           git add doc/releasenotes/${{ env.RELEASE_VERSION }}.rst
           git add doc/releasenotes/${{ env.NEW_RELEASE_VERSION }}.rst
