--- a/.github/workflows/populate-releasenotes.yml
+++ b/.github/workflows/populate-releasenotes.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Convert .rst to .md 
         run: |
           pandoc -o RELEASENOTES.md -f rst -t gfm doc/releasenotes/${{ env.RELEASE_VERSION }}.rst --columns 1000
-          sed -i "s/# Release notes for ${{ env.RELEASE_VERSION }}\n//g" RELEASENOTES.md
+          sed -i "s/# Release notes for ${{ env.RELEASE_VERSION }}//g" RELEASENOTES.md
 
 
       - name: Populate the release description with RELEASENOTES.md
